--- a/src/components/inputs/date-time-input/date-time-input.mod.css
+++ b/src/components/inputs/date-time-input/date-time-input.mod.css
@@ -58,3 +58,13 @@
   padding-top: 5px;
   padding-left: 2%;
 }
+
+.timeInput {
+  width: 100%;
+  height: 32px;
+  border: 0;
+  border-top: 1px solid #eee;
+  padding: 0 10px;
+  text-align: center;
+  font-size: 13px;
+}
