style(time-input): remove outline
Yeah, I know it's bad. The other inputs do not use an outline either right now. There is alternative styling instead. We are discussiong to readd outlines at once eventually.

--- a/src/components/inputs/time-input/time-input-body.mod.css
+++ b/src/components/inputs/time-input/time-input-body.mod.css
@@ -19,6 +19,7 @@
   font: inherit;
   margin-right: 0; /* stop that jumping */
   padding: var(--spacing-8);
+  outline: 0;
 }
 
 /* Active/Focus */
