--- a/src/components/tag/tag.mod.css
+++ b/src/components/tag/tag.mod.css
@@ -88,8 +88,8 @@
 .removeWrapper {
   border-color: var(--token-border-color-tag-pristine);
   padding: 0 var(--spacing-4);
-  border-radius: 0 var(--token-border-radius-tag)
-    var(--token-border-radius-tag) 0;
+  border-radius: 0 var(--token-border-radius-tag) var(--token-border-radius-tag)
+    0;
   display: flex;
   align-items: center;
   background: inherit;
