feat(switches): add isHovered prop to trigger hovered state programmaticaly

--- a/src/components/switches/checkbox/checkbox.mod.css
+++ b/src/components/switches/checkbox/checkbox.mod.css
@@ -63,3 +63,7 @@
   > [id='border'] {
   stroke: var(--token-border-color-input-focus);
 }
+
+.isHovered svg [id='borderAndContent'] > [id='border'] {
+  stroke: var(--token-border-color-input-focus);
+}
