--- a/src/components/switches/radio/radio-option.mod.css
+++ b/src/components/switches/radio/radio-option.mod.css
@@ -38,6 +38,10 @@
   stroke: var(--token-border-color-input-focus);
 }
 
+.isHovered svg [id='borderAndContent'] > [id='border'] {
+  stroke: var(--token-border-color-input-focus);
+}
+
 /* Hidden input */
 
 .inputWrapper {
