--- a/src/components/inputs/date-time-input/date-time-input.mod.css
+++ b/src/components/inputs/date-time-input/date-time-input.mod.css
@@ -16,7 +16,7 @@
 
 .daysHeaderContainer {
   padding: var(--spacing-16) var(--spacing-8);
-  border-top: 1px solid var(--color-gray-90);
+  border-top: 1px solid var(--color-gray);
 }
 
 .daysHeader {
