--- a/src/components/inputs/money-input/money-input.mod.css
+++ b/src/components/inputs/money-input/money-input.mod.css
@@ -23,6 +23,7 @@
   outline: none;
   box-shadow: none;
   appearance: none;
+  margin-left: 0;
 }
 
 .amountInput::placeholder {
@@ -56,6 +57,13 @@
   composes: amountInput;
   color: var(--token-font-color-error);
   border-color: var(--token-border-color-input-error);
+}
+
+.amount-focus {
+  composes: amountInput;
+  border-color: var(--token-border-color-input-focus);
+  background: var(--token-background-color-input-pristine);
+  color: var(--token-font-color-default);
 }
 
 .amount-default:active,
