--- a/materials/internals/index.css
+++ b/materials/internals/index.css
@@ -5,3 +5,4 @@
 @import './spacings.mod.css';
 @import './tokens/tokens.mod.css';
 @import './transitions.mod.css';
+@import './breakpoints.mod.css';
