feat(date-calendar): add day wrapper

--- a/src/components/inputs/date-calendar/date-calendar-day.mod.css
+++ b/src/components/inputs/date-calendar/date-calendar-day.mod.css
@@ -1,21 +1,14 @@
-.base {
+.wrapper {
   list-style-type: none;
   display: inline-block;
   margin: 4px 1%;
   width: 12%;
+}
+
+.base {
   text-align: center;
   padding: 10px 0;
   cursor: default;
-
-  /*
-    We transition these props to avoid flickering while the cursor moves between
-    days.
-    The other alternative would be to always keep the last item selected (we're
-    currently unsetting the highlight onMouseLeave manually), but keeping it
-    selected leads to confusion as the user clicks slightly outside of the date
-    and then wonders why the click is not registered.
-  */
-  transition: background-color 0.3s ease-in, color 0.3s ease-in;
 }
 
 .day {
