feat(date-calendar): add year toggles

--- a/src/components/inputs/date-calendar/date-calendar-header.mod.css
+++ b/src/components/inputs/date-calendar/date-calendar-header.mod.css
@@ -13,3 +13,13 @@
 .buttons > * {
   margin: 0 4px;
 }
+
+.yearContainer {
+  display: flex;
+  flex-direction: row;
+}
+
+.yearContainer > * {
+  margin: 0 4px 0 0;
+}
+
