--- a/src/components/inputs/date-calendar/date-calendar-header.mod.css
+++ b/src/components/inputs/date-calendar/date-calendar-header.mod.css
@@ -4,10 +4,11 @@
   margin-bottom: 4px;
   justify-content: space-between;
   border-bottom: 1px solid #eaeaea;
+  align-content: center;
 }
 
 .buttons {
-  align-self: flex-end;
+  align-self: center;
 }
 
 .buttons > * {
@@ -17,9 +18,10 @@
 .yearContainer {
   display: flex;
   flex-direction: row;
+  align-items: center;
 }
 
 .yearContainer > * {
-  margin: 0 4px 0 0;
+  margin: 0 8px 0 0;
 }
 
