--- a/materials/media-queries.mod.css
+++ b/materials/media-queries.mod.css
@@ -1,13 +1,13 @@
 /* MAX-WIDTH */
-@custom-media --screen-max-mobile (width < 768px); /* xsm */
-@custom-media --screen-max-desktop (width < 1024px); /* sm */
-@custom-media --screen-max-biggerdesktop (width < 1280px); /* md */
-@custom-media --screen-max-giantdesktop (width < 1680px); /* lg */
-@custom-media --screen-max-jumbodesktop (width < 1920px); /* xlg */
+@custom-media --screen-max-mobile (max-width: 767px); /* xsm */
+@custom-media --screen-max-desktop (max-width: 1023px); /* sm */
+@custom-media --screen-max-biggerdesktop (max-width: 1279px); /* md */
+@custom-media --screen-max-giantdesktop (max-width: 1679px); /* lg */
+@custom-media --screen-max-jumbodesktop (max-width: 1919px); /* xlg */
 
 /* MIN-WIDTH */
-@custom-media --screen-min-mobile (width >= 768px); /* xsm */
-@custom-media --screen-min-desktop (width >= 1024px); /* sm */
-@custom-media --screen-min-biggerdesktop (width >= 1280px); /* md */
-@custom-media --screen-min-giantdesktop (width >= 1680px); /* lg */
-@custom-media --screen-min-jumbodesktop (width >= 1920px); /* xlg */
+@custom-media --screen-min-mobile (min-width: 768px); /* xsm */
+@custom-media --screen-min-desktop (min-width: 1024px); /* sm */
+@custom-media --screen-min-biggerdesktop (min-width: 1280px); /* md */
+@custom-media --screen-min-giantdesktop (min-width: 1680px); /* lg */
+@custom-media --screen-min-jumbodesktop (min-width: 1920px); /* xlg */
