--- a/src/components/inputs/date-calendar/date-calendar-menu.mod.css
+++ b/src/components/inputs/date-calendar/date-calendar-menu.mod.css
@@ -1,5 +1,3 @@
-
-
 .menuBase {
   overflow-y: scroll;
   border: 1px solid var(--token-border-color-input-focus);
@@ -10,6 +8,14 @@
   background-color: white;
 }
 
+.menuBase.warning {
+  border-color: var(--token-border-color-input-warning);
+}
+
+.menuBase.error {
+  border-color: var(--token-border-color-input-error);
+}
+
 .menu {
   composes: menuBase;
   padding-bottom: 10px;
@@ -18,3 +24,4 @@
 .menuWithFooter {
   composes: menuBase;
 }
+
