--- a/src/components/internals/calendar-header/calendar-header.mod.css
+++ b/src/components/internals/calendar-header/calendar-header.mod.css
@@ -1,9 +1,9 @@
 .container {
   display: flex;
   padding: 10px 2% 6px;
-  margin-bottom: 4px;
+  margin-bottom: var(--spacing-4);
   justify-content: space-between;
-  border-bottom: 1px solid #eaeaea;
+  border-bottom: 1px solid var(--color-gray-90);
   align-items: center;
 }
 
@@ -12,7 +12,7 @@
 }
 
 .month > * {
-  margin: 0 4px 0 0;
+  margin: 0 var(--spacing-4) 0 0;
 }
 
 .year {
@@ -20,5 +20,5 @@
 }
 
 .year > * {
-  margin: 0 0 0 4px;
+  margin: 0 0 0 var(--spacing-4);
 }
