--- a/src/components/tag/tag.mod.css
+++ b/src/components/tag/tag.mod.css
@@ -3,9 +3,9 @@
 .contentWrapper {
   display: flex;
   align-items: center;
-  height: var(--token-size-height-tag);
+  min-height: var(--token-size-height-tag);
   border-radius: var(--token-border-radius-tag);
-  padding: 0 var(--spacing-8);
+  padding: 5px var(--spacing-8);
   cursor: default;
   font-family: inherit;
   white-space: normal;
