feat(money-input): set amount input to 100%

--- a/src/components/inputs/money-input/money-input.mod.css
+++ b/src/components/inputs/money-input/money-input.mod.css
@@ -19,6 +19,7 @@
 
 .amountInput {
   display: flex;
+  width: 100%;
   flex: 1;
   color: var(--font-color-default);
   font-family: var(--font-family-default);
