feat: improve money-input
Adds isAutofocussed and isReadOnly props. Also adds label surrounding the single value of
the currency dropdown, so it can be targeted using rtl, like in the localized-text-input

--- a/src/components/inputs/money-input/money-input.mod.css
+++ b/src/components/inputs/money-input/money-input.mod.css
@@ -47,6 +47,13 @@
   opacity: 1; /* fix for mobile safari */
 }
 
+.amount-readonly {
+  composes: amountInput;
+  border-color: var(--token-border-color-input-readonly);
+  color: var(--token-font-color-readonly);
+  cursor: default;
+}
+
 .amount-warning {
   composes: amountInput;
   color: var(--token-font-color-warning);
