--- a/src/components/inputs/money-input/money-input.mod.css
+++ b/src/components/inputs/money-input/money-input.mod.css
@@ -1,9 +1,10 @@
 .currency-label {
-  position: relative;
   display: flex;
+  color: var(--token-font-color-disabled);
+  background-color: var(--token-background-color-input-disabled);
   border-top-left-radius: var(--token-border-radius-input);
   border-bottom-left-radius: var(--token-border-radius-input);
-  border: 1px var(--token-border-color-input-pristine) solid;
+  border: 1px var(--token-border-color-input-disabled) solid;
   border-right: 0;
   padding: 0 var(--spacing-8);
   align-items: center;
